tests/baselines/reference/ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndNonGenericClassStaticFunctionOfTheSameName.types
=== tests/cases/conformance/internalModules/DeclarationMerging/ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndNonGenericClassStaticFunctionOfTheSameName.ts ===
class clodule<T> {
>clodule : clodule<T>
>T : T

    id: string;
>id : 文字
>类型别名 :=> 文字

    value: T;
>value : T
>T : T

    static fn(id: string) { }
>fn : (id: 文字) => 无值
>id : 文字
>类型别名 :=> 文字
}

module clodule {
>clodule : 类为 clodule

    // error: duplicate identifier expected
    export function fn<T>(x: T, y: T): T {
>fn : <T>(x: T, y: T) => T
>T : T
>x : T
>T : T
>y : T
>T : T
>T : T

        return x;
>x : T
    }
}


